@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.ui.laf.darcula;
 
 import com.intellij.diagnostic.LoadingState;
@@ -6,43 +6,37 @@ import com.intellij.ide.IdeEventQueue;
 import com.intellij.ide.ui.UITheme;
 import com.intellij.ide.ui.laf.IdeaLaf;
 import com.intellij.openapi.Disposable;
-import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.*;
 import com.intellij.ui.ComponentUtil;
 import com.intellij.ui.TableActions;
-import com.intellij.ui.scale.JBUIScale;
 import com.intellij.ui.scale.ScaleContext;
 import com.intellij.util.Alarm;
 import com.intellij.util.ResourceUtil;
-import com.intellij.util.ui.JBUI;
+import com.intellij.util.ui.JBDimension;
 import com.intellij.util.ui.MultiResolutionImageProvider;
 import com.intellij.util.ui.StartupUiUtil;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import sun.awt.AppContext;
 
 import javax.swing.*;
 import javax.swing.plaf.FontUIResource;
 import javax.swing.plaf.basic.BasicLookAndFeel;
 import javax.swing.plaf.metal.MetalLookAndFeel;
-import javax.swing.text.html.HTMLEditorKit;
-import javax.swing.text.html.StyleSheet;
 import java.awt.*;
 import java.awt.event.KeyEvent;
 import java.io.IOException;
-import java.io.StringReader;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.reflect.Method;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
 
 /**
@@ -51,31 +45,28 @@ import java.util.function.Function;
 public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
   public static final @NlsSafe String NAME = "Darcula";
   private static final @NlsSafe String DESCRIPTION = "IntelliJ Dark Look and Feel";
-  private LookAndFeel base;
-  private boolean isBaseInitialized;
 
-  protected Disposable myDisposable;
-  private final UserDataHolderBase myUserData = new UserDataHolderBase();
-  private static boolean myAltPressed;
+  private static final AtomicReference<LookAndFeel> preInitializedBaseLaf = new AtomicReference<>();
+
+  public static boolean setPreInitializedBaseLaf(@NotNull LookAndFeel value) {
+    return preInitializedBaseLaf.compareAndSet(null, value);
+  }
+
+  private LookAndFeel base;
+
+  private Disposable disposable;
+  private final UserDataHolderBase userData = new UserDataHolderBase();
+  private static boolean isAltPressed;
   protected final UIDefaults baseDefaults = new UIDefaults();
 
-  public DarculaLaf(@NotNull LookAndFeel base) {
-    this.base = base;
-    isBaseInitialized = true;
-  }
-
-  public DarculaLaf() {
-  }
-
-  @Nullable
   @Override
-  public <T> T getUserData(@NotNull Key<T> key) {
-    return myUserData.getUserData(key);
+  public @Nullable <T> T getUserData(@NotNull Key<T> key) {
+    return userData.getUserData(key);
   }
 
   @Override
   public <T> void putUserData(@NotNull Key<T> key, @Nullable T value) {
-    myUserData.putUserData(key, value);
+    userData.putUserData(key, value);
   }
 
   protected static void log(Throwable e) {
@@ -103,22 +94,20 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
       UIDefaults defaults = base.getDefaults();
       baseDefaults.putAll(defaults);
 
-      if (SystemInfoRt.isLinux && Arrays.asList("CN", "JP", "KR", "TW").contains(Locale.getDefault().getCountry())) {
-        defaults.keySet().stream().
-          filter(key -> key.toString().endsWith(".font")).
-          forEach(key -> {
+      if (SystemInfoRt.isLinux && List.of("CN", "JP", "KR", "TW").contains(Locale.getDefault().getCountry())) {
+        for (Object key : defaults.keySet()) {
+          if (key.toString().endsWith(".font")) {
             Font font = toFont(defaults, key);
-            Font uiFont = new FontUIResource("Dialog", font.getStyle(), font.getSize());
-            defaults.put(key, uiFont);
-          });
+            defaults.put(key, new FontUIResource("Dialog", font.getStyle(), font.getSize()));
+          }
+        }
       }
 
       StartupUiUtil.initInputMapDefaults(defaults);
       initIdeaDefaults(defaults);
-      patchStyledEditorKit(defaults);
       patchComboBox(metalDefaults, defaults);
       defaults.remove("Spinner.arrowButtonBorder");
-      defaults.put("Spinner.arrowButtonSize", JBUI.size(16, 5).asUIResource());
+      defaults.put("Spinner.arrowButtonSize", new JBDimension(16, 5).asUIResource());
       if (SystemInfoRt.isMac) {
         defaults.put("RootPane.defaultButtonWindowKeyBindings", new Object[]{
           "ENTER", "press",
@@ -145,34 +134,11 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
     defaults.put("ComboBox.actionMap", metalDefaults.get("ComboBox.actionMap"));
   }
 
-  private void patchStyledEditorKit(UIDefaults defaults) {
-    String relativePath = getPrefix() + (JBUIScale.isUsrHiDPI() ? "@2x.css" : ".css");
-    try {
-      byte[] dataBytes = ResourceUtil.getResourceAsBytes(relativePath, DarculaLaf.class.getClassLoader());
-      if (dataBytes == null) {
-        Logger.getInstance(DarculaLaf.class).error("Cannot find " + relativePath + " file");
-        return;
-      }
-
-      StyleSheet styleSheet = new StyleSheet();
-      styleSheet.loadRules(new StringReader(new String(dataBytes, StandardCharsets.UTF_8)), null);
-      defaults.put("StyledEditorKit.JBDefaultStyle", styleSheet);
-
-      Object defaultStylesKey = MethodHandles.privateLookupIn(HTMLEditorKit.class, MethodHandles.lookup())
-        .findStaticGetter(HTMLEditorKit.class, "DEFAULT_STYLES_KEY", Object.class).invokeExact();
-      AppContext.getAppContext().put(defaultStylesKey, styleSheet);
-    }
-    catch (Throwable e) {
-      Logger.getInstance(DarculaLaf.class).warn(relativePath + " loading failed", e);
-    }
-  }
-
   protected @NotNull String getPrefix() {
     return "com/intellij/ide/ui/laf/darcula/darcula";
   }
 
-  @Nullable
-  protected String getSystemPrefix() {
+  protected @Nullable String getSystemPrefix() {
     return null;
   }
 
@@ -278,8 +244,7 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
   }
 
   @Override
-  @Nls(capitalization = Nls.Capitalization.Title)
-  public String getName() {
+  public @Nls(capitalization = Nls.Capitalization.Title) String getName() {
     return NAME;
   }
 
@@ -305,21 +270,21 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
 
   @Override
   public void initialize() {
-    if (!isBaseInitialized) {
-      try {
+    try {
+      if (base == null) {
+        base = preInitializedBaseLaf.getAndSet(null);
         if (base == null) {
           base = createBaseLaF();
         }
-        base.initialize();
       }
-      catch (Throwable e) {
-        log(e);
-      }
+      base.initialize();
+    }
+    catch (Throwable e) {
+      log(e);
     }
 
-    if (LoadingState.LAF_INITIALIZED.isOccurred()) {
-      ideEventQueueInitialized(IdeEventQueue.getInstance());
-    }
+    LoadingState.BASE_LAF_INITIALIZED.checkOccurred();
+    ideEventQueueInitialized(IdeEventQueue.getInstance());
   }
 
   @ApiStatus.Internal
@@ -328,8 +293,7 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
       Class<?> aClass = DarculaLaf.class.getClassLoader().loadClass(UIManager.getSystemLookAndFeelClassName());
       return (BasicLookAndFeel)MethodHandles.lookup().findConstructor(aClass, MethodType.methodType(void.class)).invoke();
     }
-
-    if (!SystemInfoRt.isLinux) {
+    else if (!SystemInfoRt.isLinux) {
       return new IdeaLaf(null);
     }
 
@@ -357,22 +321,11 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
     return new IdeaLaf(fontDefaults.isEmpty() ? null : fontDefaults);
   }
 
-  @ApiStatus.Internal
-  public void appCreated(@NotNull Disposable parent) {
-    if (myDisposable != null) {
-      Disposer.register(parent, myDisposable);
-    }
-  }
-
-  @ApiStatus.Internal
-  public final void ideEventQueueInitialized(@NotNull IdeEventQueue eventQueue) {
-    if (myDisposable == null) {
-      myDisposable = Disposer.newDisposable();
+  private void ideEventQueueInitialized(@NotNull IdeEventQueue eventQueue) {
+    if (disposable == null) {
+      disposable = Disposer.newDisposable();
       if (LoadingState.COMPONENTS_REGISTERED.isOccurred()) {
-        Application application = ApplicationManager.getApplication();
-        if (application != null) {
-          Disposer.register(application, myDisposable);
-        }
+        Disposer.register(ApplicationManager.getApplication(), disposable);
       }
     }
 
@@ -386,29 +339,29 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
         }
 
         //noinspection AssignmentToStaticFieldFromInstanceMethod
-        myAltPressed = e.getID() == KeyEvent.KEY_PRESSED;
+        isAltPressed = e.getID() == KeyEvent.KEY_PRESSED;
         Alarm mnemonicAlarm = this.mnemonicAlarm;
         if (mnemonicAlarm == null) {
-          mnemonicAlarm = new Alarm(Alarm.ThreadToUse.POOLED_THREAD, myDisposable);
+          mnemonicAlarm = new Alarm(Alarm.ThreadToUse.POOLED_THREAD, disposable);
           this.mnemonicAlarm = mnemonicAlarm;
         }
 
         mnemonicAlarm.cancelAllRequests();
         Component focusOwner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
         if (focusOwner != null) {
-          mnemonicAlarm.addRequest(() -> repaintMnemonics(focusOwner, myAltPressed), 10);
+          mnemonicAlarm.addRequest(() -> repaintMnemonics(focusOwner, isAltPressed), 10);
         }
         return false;
       }
-    }, myDisposable);
+    }, disposable);
   }
 
   public static boolean isAltPressed() {
-    return myAltPressed;
+    return isAltPressed;
   }
 
   private static void repaintMnemonics(@NotNull Component focusOwner, boolean pressed) {
-    if (pressed != myAltPressed) {
+    if (pressed != isAltPressed) {
       return;
     }
 
@@ -432,15 +385,14 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
   @Override
   public void uninitialize() {
     try {
-      isBaseInitialized = false;
       base.uninitialize();
     }
     catch (Exception ignore) {
     }
 
-    if (myDisposable != null) {
-      Disposer.dispose(myDisposable);
-      myDisposable = null;
+    if (disposable != null) {
+      Disposer.dispose(disposable);
+      disposable = null;
     }
   }
 
@@ -452,6 +404,7 @@ public class DarculaLaf extends BasicLookAndFeel implements UserDataHolder {
                                                                     String[].class,
                                                                     boolean.class);
       superMethod.setAccessible(true);
+      // invoke method on a base LaF, not on our instance
       superMethod.invoke(base, defaults, systemColors, useNative);
     }
     catch (Exception e) {
